--- a/template/src/index.html
+++ b/template/src/index.html
@@ -19,14 +19,10 @@
     <!-- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  -->
     <!-- jQuery End-->
 
-    <!-- build:css -->
-    <link rel="stylesheet" href="style/main.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="dist/build/main.css">
 </head>
 <body>
-<div id="react"></div>
-    <!-- build:js -->
-    <script src="src/app.js"></script>
-    <!-- endbuild -->
+<div class="container" id="react"></div>
+    <script src="dist/build/app.min.js"></script>
 </body>
 </html>
