--- a/template/src/index.html
+++ b/template/src/index.html
@@ -19,10 +19,10 @@
     <!-- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  -->
     <!-- jQuery End-->
 
-    <link rel="stylesheet" href="dist/build/main.css">
+    <link rel="stylesheet" href="dev/main.css">
 </head>
 <body>
 <div class="container" id="react"></div>
-    <script src="dist/build/app.min.js"></script>
+    <script src="dev/main.js"></script>
 </body>
 </html>
