first webpack version

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -23,6 +23,6 @@
 </head>
 <body>
 <div class="container" id="react"></div>
-    <script src="dev/main.js"></script>
+    <script src="/static/bundle.js"></script>
 </body>
 </html>
