--- a/template/src/index.html
+++ b/template/src/index.html
@@ -19,10 +19,10 @@
     <!-- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  -->
     <!-- jQuery End-->
 
-    <link rel="stylesheet" href="dev/main.css">
+    <!-- <link rel="stylesheet" href="dev/main.css"> -->
 </head>
 <body>
-<div class="container" id="react"></div>
+<div class="container" id="root"></div>
     <script src="/static/bundle.js"></script>
 </body>
 </html>
