#12, #13, add production webpack config

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React ES6 Gulp Template</title>
+    <title>React + Redux + Hot + Webpack + Express Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     
     <!-- Uncomment the the below section to enable Materialize -->
@@ -22,7 +22,6 @@
     <!-- <link rel="stylesheet" href="dev/main.css"> -->
 </head>
 <body>
-<div class="container" id="root"></div>
-    <script src="/static/bundle.js"></script>
+    <div class="container" id="root"></div>
 </body>
 </html>
