add lint in loader, fix lint, fix test

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <title>React + Redux + Hot + Webpack + Express Template</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="dependencies/semantic.min.css">
-  <script type="text/javascript" src="dependencies/jquery.min.js"></script>
-  <script type="text/javascript" src="dependencies/semantic.min.js"></script>
+  <!-- <link rel="stylesheet" href="dependencies/semantic.min.css"> -->
+  <!-- <script type="text/javascript" src="dependencies/semantic.min.js"></script> -->
 </head>
 <body>
-  <div class="container" id="root"></div>
+  <div class="root-container" id="root"></div>
 </body>
 </html>
