--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,3 +10,20 @@
   width: 54px;
   height: 54px;
 }
+
+.reactux-card-feature {
+  padding: 10px;
+}
+
+.reactux-card-text {
+  font-size: 16px;
+}
+
+.reactux-collection {
+  border: none;
+}
+
+.reactux-collection-item {
+  font-size: 14px;
+  padding: 15px 20px !important;
+}
